--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -203,6 +203,13 @@
 		float:right;
 		width:30%;
 	}
+
+	.wide-comic-page .content{
+		max-width:100%;
+	}
+	.wide-comic-page .s{
+		display:none;
+	}
 }
 
 @media all and (min-width:1024px){
