--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -203,11 +203,10 @@
 		float:right;
 		width:30%;
 	}
-
-	.wide-comic-page .content{
+	.single-row-comic-page .content{
 		max-width:100%;
 	}
-	.wide-comic-page .s{
+	.single-row-page .s{
 		display:none;
 	}
 }
