--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -2,7 +2,7 @@
 
 {% block title %}Adventures of Hate and NuT | Latest Webcomic{% endblock %}
 
-{% block body_class %}home {% if latest_comic.single_row %}wide-comic-page {% endif %}{% endblock %}
+{% block body_class %}home {% if latest_comic.single_row %}single-row-comic-page {% endif %}{% endblock %}
 
 {% block extra_head %}{% load static from staticfiles %}
 	
