--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -206,7 +206,7 @@
 	.single-row-comic-page .content{
 		max-width:100%;
 	}
-	.single-row-page .s{
+	.single-row-comic-page .s{
 		display:none;
 	}
 }
