Can give it a whirl for a while

--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -209,6 +209,9 @@
 	.single-row-comic-page .s{
 		display:none;
 	}
+	.FotomotoToolbarClass{
+		display:block;
+	}
 }
 
 @media all and (min-width:1024px){
