--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -277,7 +277,7 @@
 	}
 	.content{
 		margin:-65px 0 0;
-		max-width:71%;
+		max-width:70%;
 		float:left;
 	}
 	.non-comic .content{
@@ -311,6 +311,9 @@
 	}
 	.button{
 		padding:.6em 1.2em;
+	}
+	.content{
+		max-width: 71%;
 	}
 }
 
