--- a/assets/themes/hancom/templates/social/comic_share_buttons.html
+++ b/assets/themes/hancom/templates/social/comic_share_buttons.html
@@ -2,7 +2,7 @@
 	<li class="share-twitter">
 		<a href="https://twitter.com/share" 
 		class="twitter-share-button" 
-		data-text="Hate and NuT #{{ comic.chronology }} - {{ comic.description }}" 
+		data-text="Hate and NuT #{{ comic.chronology }} - {{ comic.title }}" 
 		data-url="{{ SITE_URL }}{{ comic.get_absolute_url }}" 
 		data-size="large" 
 		data-related="brantsteen" 
