minor changes and optimizations

--- a/assets/themes/hancom/static/css/404.css
+++ b/assets/themes/hancom/static/css/404.css
@@ -1,13 +1,13 @@
-.pg-404 .content{
+.nopg .content{
 	background:none;
 	padding:0;
 	border-radius:0;
 	border:none;
 	margin:0;
 }
-.pg-404 .s{
+.nopg .s{
 	margin:0;
 }
-.pg-404 .pg{
+.nopg .pg{
 	margin:0;
 }
