--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -72,7 +72,7 @@ ul{
 	float:left;
 }
 .pg-head-wrap{
-	background:#881c1e url('img/feathers.png');
+	background:#881c1e url('img/feathers_and_color.jpg');
 	padding:0 0 5px 0;
 }
 .pg-head{
