--- a/assets/themes/hancom/static/css/style.l.css
+++ b/assets/themes/hancom/static/css/style.l.css
@@ -15,7 +15,7 @@
 	}
 	h1{
 		font-size:1.8em;
-		margin:.8em 0;s
+		margin:.8em 0;
 		font-weight:bold;
 	}
 	.professional .content h1{
@@ -30,7 +30,7 @@
 		margin:.8em 0;
 	}
 	.pg-wrap{
-		background:#881c1e url('img/feathers.png');
+		background:#881c1e url('img/feathers_and_color.jpg');
 	}
 	.pg{
 		padding:10px 10px 0 10px;
