--- a/assets/themes/hancom/templates/404.html
+++ b/assets/themes/hancom/templates/404.html
@@ -4,7 +4,7 @@
 
 {% block title %}Page Not Found | 404 {{ block.super }}{% endblock %}
 
-{% block body_class %}pg-404{% endblock %}
+{% block body_class %}nopg{% endblock %}
 
 {% block content %}
 	<h1 class="heading-404">404 - Page Not Found</h1>
