--- a/assets/themes/hancom/templates/characters/index.html
+++ b/assets/themes/hancom/templates/characters/index.html
@@ -2,7 +2,7 @@
 {% load markup %}
 {% block title %}Characters {{ block.super }}{% endblock %}
 
-{% block body_class %}pg-404{% endblock %}
+{% block body_class %}nopg{% endblock %}
 
 {% block content %}
 	<h1 class="heading-404">The Cast</h1>
