some meta descriptions

--- a/assets/themes/hancom/templates/characters/base.html
+++ b/assets/themes/hancom/templates/characters/base.html
@@ -1,1 +1,3 @@
 {% extends "base.html" %}
+
+{% block meta_description %}Meet the cast of colorful characters that appear in the Hate and NuT webcomic{% endblock %}
