--- a/assets/themes/hancom/templates/website/contact.html
+++ b/assets/themes/hancom/templates/website/contact.html
@@ -6,6 +6,8 @@
 
 {% block title %}Contact {{ block.super }}{% endblock %}
 
+{% block meta_description %}Have something on your mind? Feedback on the comic? Drop me a line here, I'll get back to you soon!{% endblock %}
+
 {% block body_class %}{{ block.super }} professional{% endblock %}
 
 {% block content %}
