--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -307,6 +307,15 @@ ul{
 	float:none;
 	width:auto;
 }
+
+.story-arc-from-beginning{
+	font-size:.9em;
+	font-style: italic;
+}
+.story-arc-from-beginning a{
+	font-style:normal;
+}
+
 @media all and (max-width:747px){
 	.smallscreen-clearfix:before,
 	.smallscreen-clearfix:after {
