--- a/assets/themes/hancom/templates/comics/comic_page.html
+++ b/assets/themes/hancom/templates/comics/comic_page.html
@@ -55,13 +55,13 @@
 				<li class="comic-nav-list-item comic-nav-list-item-right">
 					{% if comic.is_available_to_public %}
 						{% if next_comic %}
-							<a id="nextComic" class="comic-nav-list-item-link" href="{{ next_comic.get_absolute_url }}" title="Next Comic"><span class="visuallyhidden">Next</span><i class="icon-caret-right"></i></a></li>
+							<a id="nextComic" class="comic-nav-list-item-link" href="{{ next_comic.get_absolute_url }}" title="Next Comic"><span class="visuallyhidden">Next</span><i class="icon-caret-right"></i></a>
 						{% else %}
 							<span class="visuallyhidden">Next</span><i class="icon-caret-right"></i>
 						{% endif %}
 					{% else %}
 						{% with comic.chronology|add:"1" as NEXT %}
-							<a id="nextComic" class="comic-nav-list-item-link" href="{% url 'comic' comic_id=NEXT %}" title="Next Comic"><span class="visuallyhidden">Next</span><i class="icon-caret-right"></i></a></li>
+							<a id="nextComic" class="comic-nav-list-item-link" href="{% url 'comic' comic_id=NEXT %}" title="Next Comic"><span class="visuallyhidden">Next</span><i class="icon-caret-right"></i></a>
 						{% endwith %}
 					{% endif %}
 				</li>
@@ -77,22 +77,22 @@
 		<img src="{{ comic.comic_image.url }}" class="comic" alt="Comic entitled '{{ comic.title }}'"  itemprop="image" />
 	{% endif %}
 	
+	<p class="comic-date">{{ comic.date|date }}</p>
 
-	
-	<p>{{ comic.date|date }}</p>
+
 
 	{% if comic.inside_arc %}
 		<p class="story-arc-from-beginning">You are reading the "{{ comic.story_arc.name }}" story arc. <a href="{{ comic.story_arc.get_absolute_url }}">Read it from the beginning.</a></p>
 	{% endif %}
-
+	
 	{% if not comic.single_row %}
-		<p><div id="FotomotoToolbar" class="FotomotoToolbarClass"></div></p>
+		<div id="FotomotoToolbar" class="FotomotoToolbarClass"></div>
 	{% endif %}
-
-	<p class="hidden" itemprop="datePublished">{{ comic.date|date:"Y-m-d" }}</p>
 	
 	{% include "social/comic_share_buttons.html" %}
 	
+	<p class="hidden" itemprop="datePublished">{{ comic.date|date:"Y-m-d" }}</p>
+
 {% endblock %}
 
 {% block extra_foot %}
