--- a/assets/themes/hancom/templates/website/home.html
+++ b/assets/themes/hancom/templates/website/home.html
@@ -46,14 +46,14 @@
 		<img src="{{ latest_comic.comic_image.url }}" class="comic" alt="Comic entitled '{{ latest_comic.title }}'" />
 	{% endif %}
 	
-	<p>{{ latest_comic.date|date }}</p>
+	<p class="comic-date">{{ latest_comic.date|date }}</p>
 
 	{% if latest_comic.inside_arc %}
 		<p class="story-arc-from-beginning">You are reading the "{{ latest_comic.story_arc.name }}" story arc. <a href="{{ latest_comic.story_arc.get_absolute_url }}">Read it from the beginning.</a></p>
 	{% endif %}
 
 	{% if not latest_comic.single_row %}
-		<p><div id="FotomotoToolbar" class="FotomotoToolbarClass"></div></p>
+		<div id="FotomotoToolbar" class="FotomotoToolbarClass"></div>
 	{% endif %}
 	
 	{% with latest_comic as comic %}
