Some extra GA events

--- a/assets/themes/hancom/static/css/style.css
+++ b/assets/themes/hancom/static/css/style.css
@@ -310,10 +310,12 @@ ul{
 	width:auto;
 }
 
+.continuation-of,
 .story-arc-from-beginning{
 	font-size:.9em;
 	font-style: italic;
 }
+.continuation-of,
 .story-arc-from-beginning a{
 	font-style:normal;
 }
