Meta description for sponsorship page

--- a/assets/themes/hancom/templates/website/sponsor.html
+++ b/assets/themes/hancom/templates/website/sponsor.html
@@ -1,7 +1,12 @@
 {% extends "layouts/two_column.html" %}
+
 {% load url from future %}
+
 {% block title %}Sponsor {{ block.super }}{% endblock %}
+
 {% block body_class %}{{ block.super }} professional{% endblock %}
+
+{% block meta_description %}Sponsor the RSS Feed for The Adventures of Hate and NuT Webcomic. Sponsorship spots will be placed directly into the webcomic's RSS feed and displayed to subscribers.{% endblock %}
 
 {% block right_column %}
 	<h1>Let's Chat</h1>
