--- a/assets/themes/hancom/templates/website/sponsor.html
+++ b/assets/themes/hancom/templates/website/sponsor.html
@@ -14,7 +14,7 @@
 {% endblock %}
 
 {% block left_column %}
-	<h1>Interested in Becoming a Sponsor?</h1>
+	<h1>Interested in Becoming a Sponsor??</h1>
 	<p>You'll have a chance to reach the Hate and NuT audience in two ways.</p>
 	<h2>1) The Hate and NuT Feed</h2>
 	<p>Sponsors get a blurb and a link that is inserted right into the Hate and NuT feed.</p>
